...
            android:contentDescription="@string/null_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailsTitle"
            style="@style/SearchApp.HeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallMargin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
...
